# b4-le-me-player

./: CMakeLists.txt  README.md  README.ru.md
src/: CMakeLists.txt  build-constants.h.in  main.cpp
src/mpris/: README.md  declarative-mpris-adaptor.cpp  declarative-mpris-adaptor.h  declarative-mpris-interface.cpp  declarative-mpris-interface.h
src/mpv/: README.md  declarative-mpv-item.cpp  declarative-mpv-item.h  declarative-mpv-properties.h
src/mqtt/: README.md  declarative-mqtt-client.cpp  declarative-mqtt-client.h
src/qml/: Constants.qml  Main.qml  UiConstants.qml
